<resources>
    <array name="player_info_left_drawer_icons">
        <item>@drawable/ic_swap_bag_24dp</item>
        <item>@drawable/ic_hanging_sign_24dp</item>
        <item>@drawable/ic_spell_book_24dp</item>
        <item>@drawable/ic_scroll_unfurled_24dp</item>
        <item>@drawable/ic_scroll_unfurled_24dp</item>
        <item>@drawable/ic_skills_24dp</item>
    </array>
    <string name="app_name">Campaign+</string>
    <string name="title_activity_server_settings">Settings</string>
    <string name="title_activity_add_item">Create Items</string>
    <string name="title_activity_player_stats">Stats</string>
    <string name="title_activity_add_spell">Add Spells</string>
    <string name="title_activity_player_spell">Spells</string>
    <string name="title_activity_player_item">Items</string>
    <string name="speed">Speed</string>
    <string name="max_hp">Max HP</string>
    <string name="exhaustion">Exhaustion</string>
    <string name="level">Level</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="charisma">Charisma</string>
    <string name="wisdom">Wisdom</string>

    <string name="default_ip">192.168.1.1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_pc_info_text">Select an existing character for this campaign. Selecting a character which is already used in one campaign will remove it from there, and add it to this campaign.</string>
    <string name="add_pc_info_text">Create a new character for this campaign.</string>
    <string name="log_out">Log Out</string>
    <string name="show_pc">Show PC</string>
    <string name="show_phb">Show PHB</string>
    <string name="default_port">5000</string>
    <string name="campaign_qr">Campaign QR</string>
    <string name="title_activity_player_class">Class Info</string>
    <string name="show_map">Show Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ritual">Ritual</string>
    <string name="concentration">Concentration</string>
    <string name="silver">Silver</string>
    <string name="copper">Copper</string>
    <string name="temp_hp">Temp HP</string>
    <string name="current_hp">Current HP</string>
    <string name="armor_class">Armor Class</string>
    <string name="add_item">Add Item</string>


    <string-array name="player_info_left_drawer_titles">
        <item>Add Item</item>
        <item>Create Spell</item>
        <item>My Spells</item>
        <item>Add Spell</item>
        <item>Table Info</item>
        <item>Player Stats</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="exhaustion_info_text">
        <item>No exhaustion.</item>
        <item>Disadvantage on ability checks.</item>
        <item>Speed halved.</item>
        <item>Disadvantage on attack rolls and saving throws.</item>
        <item>Hit point maximum halved.</item>
        <item>Speed reduced to 0.</item>
    </string-array>
</resources>
