<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_show_phb"
        android:orderInCategory="200"
        android:title="@string/show_phb"
        android:icon="@drawable/ic_rule_book_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_showpc"
        android:orderInCategory="200"
        android:title="@string/show_pc"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_qr"
        android:orderInCategory="300"
        android:title="@string/campaign_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>