<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include
        android:id="@+id/fragment_toolbar"
        layout="@layout/fragment_toolbar_save" />

    <ScrollView
        android:id="@+id/stats_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:onClick="eatClickEvent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/player_info_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/player_stats_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="Player Stats"
                    android:textSize="10pt"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    android:text="@string/level"
                    android:textSize="8pt"

                    app:layout_constraintEnd_toStartOf="@id/level_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/player_stats_header" />


                <EditText
                    android:id="@+id/level_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/level"
                    android:inputType="numberSigned"
                    android:selectAllOnFocus="true"

                    app:layout_constraintBottom_toBottomOf="@id/level_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/level_text"
                    app:layout_constraintTop_toTopOf="@id/level_text" />

                <TextView
                    android:id="@+id/armor_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    android:text="Armor"
                    android:textSize="8pt"

                    app:layout_constraintEnd_toStartOf="@id/armor_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/level_text" />

                <EditText
                    android:id="@+id/armor_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="Armor"
                    android:selectAllOnFocus="true"
                    android:inputType="numberSigned"

                    app:layout_constraintBottom_toBottomOf="@id/armor_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/armor_text"
                    app:layout_constraintTop_toTopOf="@id/armor_text" />


                <TextView
                    android:id="@+id/hp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    android:text="@string/max_hp"
                    android:textSize="8pt"

                    app:layout_constraintEnd_toStartOf="@id/hp_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/armor_text" />


                <EditText

                    android:id="@+id/hp_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/max_hp"
                    android:selectAllOnFocus="true"
                    android:inputType="numberSigned"

                    app:layout_constraintBottom_toBottomOf="@id/hp_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/hp_text"
                    app:layout_constraintTop_toTopOf="@id/hp_text" />

                <TextView
                    android:id="@+id/speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"

                    android:text="@string/speed"
                    android:textSize="8pt"

                    app:layout_constraintEnd_toStartOf="@id/speed_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hp_text" />


                <EditText

                    android:id="@+id/speed_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/speed"
                    android:selectAllOnFocus="true"
                    android:inputType="numberSigned"

                    app:layout_constraintBottom_toBottomOf="@id/speed_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/speed_text"
                    app:layout_constraintTop_toTopOf="@id/speed_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_info_wrapper">

                <TextView
                    android:id="@+id/combat_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="Combat Info"
                    android:textSize="10pt"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exhaustion_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center_horizontal"
                    android:text="@string/exhaustion"
                    android:textSize="8pt"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/combat_info_text" />

                <RadioGroup
                    android:id="@+id/exhaustion_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/exhaustion_0"
                    android:gravity="center"
                    android:orientation="horizontal"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exhaustion_text">

                    <RadioButton
                        android:id="@+id/exhaustion_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/exhaustion_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <RadioButton
                        android:id="@+id/exhaustion_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <RadioButton
                        android:id="@+id/exhaustion_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <RadioButton
                        android:id="@+id/exhaustion_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                    <RadioButton
                        android:id="@+id/exhaustion_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                </RadioGroup>

                <TextView
                    android:id="@+id/exhaustion_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="No exhaustion"
                    android:textSize="8pt"
                    android:textStyle="italic"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exhaustion_buttons" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>